[gd_scene load_steps=7 format=2]

[ext_resource path="res://Themes/ColorButton.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Colors.gd" type="Script" id=2]
[ext_resource path="res://Themes/GameLabel.tres" type="Theme" id=3]
[ext_resource path="res://Themes/Note.tres" type="Theme" id=4]
[ext_resource path="res://Themes/MetalPanel.tres" type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Colors" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -179.0
margin_right = 167.0
margin_bottom = 182.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel/CenterContainer"]
margin_right = 260.0
margin_bottom = 260.0
columns = 2

[node name="Color1" type="Button" parent="CanvasLayer/Panel/CenterContainer/GridContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
theme = ExtResource( 1 )

[node name="Color2" type="Button" parent="CanvasLayer/Panel/CenterContainer/GridContainer"]
modulate = Color( 0, 0, 1, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
theme = ExtResource( 1 )

[node name="Color3" type="Button" parent="CanvasLayer/Panel/CenterContainer/GridContainer"]
modulate = Color( 0, 1, 0, 1 )
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )
theme = ExtResource( 1 )

[node name="Color4" type="Button" parent="CanvasLayer/Panel/CenterContainer/GridContainer"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 132.0
margin_top = 132.0
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )
theme = ExtResource( 1 )

[node name="ClickBlock" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -136.0
margin_right = 146.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -220.0
margin_right = 135.0
margin_bottom = -156.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Note"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -11.5
margin_right = 100.0
margin_bottom = 18.5
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
text = "Repeat in order!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
